# duck-db-server

./: .gitignore  Dockerfile  ddl.sql  docker-compose.yml  duckdb_server.py  init.sql  justfile
.github/: copilot-instructions.md
cube/: cube.js
cube/model/cubes/: nyc_taxi_rides.js  orders.js  orders.yml  orders_hv.yml  orders_hv_monthly.yml
cube/schema/: Orders.js
quicksilver-container/: duckdb_client.py  main.py  metabase_loader.py  pyproject.toml
quicksilver-cube/: Dockerfile  entrypoint.sh
trino/etc/: config.properties
trino/etc/catalog/: iceberg.properties
