[project]
name = "quicksilver-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "faker>=40.13.0",
    "numpy>=2.4.4",
    "polars>=1.39.3",
    "psycopg[binary]>=3.3.3",
    "typer>=0.24.1",
]
